app/style/style.scss
@import url('https://fonts.googleapis.com/css?family=Lato&subset=latin-ext');

$Lato: 'Lato', sans-serif;
html, body {
  margin: 0;
  padding: 0;
}

.flex-column {
  display: flex;
  flex-direction: column;
}

.flex-row {
  display: flex;
  flex-direction: row;
}

header {
  background: url("../images/bg.png") no-repeat center;
  background-size: cover;
  min-height: 800px;
  nav {
    .menu {
      width: 100%;
      padding: 0;
      padding-top: 40px;
      margin: 0;
      display: flex;
      justify-content: center;
      list-style: none;
      font-family: $Lato;
      text-transform: uppercase;
      font-weight: bold;
      font-size: 13px;
      &__item {
        a {
          display: block;
          color: #4d4959;
          text-decoration: none;
          padding: 34px;
        }
      }
    }
  }
}

main {
  font-family: $Lato;
  .title-text {
    text-align: center;
    color: #353738;
    font-family: $Lato;
    font-size: 18px;
    h3 {
      text-transform: uppercase;
    }
    p {
      color: #848789;
      line-height: 34px;
      margin: 0;
    }
  }
  .new-generation {
    .container {
      padding: 117px 279px;
    }

  }
  .generation-info {
    .row {
      display: flex;
      padding: 0;
      .image-container {
        width: 70%;
        background-repeat: no-repeat!important;
        background-size: cover!important;
        display: flex;
        align-items: center;
        justify-content: space-around;
      }
      img {
        width: 100%;
        height: 100%;
      }
      .flex-column {
        display: flex;
        flex-direction: column;
        width: 30%;
        .title-text {
          .title-text__icon {
            padding-top: 65px;
          }
          p {
            text-align: left;
            padding: 65px;
            padding-top: 0;
            margin-bottom: 53px;
          }
        }
      }
    }
    .row:last-child {
      .image-container {
        width: 33.333%;
      }
      .flex-column {
        width: 33.333%;
      }
    }
  }
  .contact {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    .carousel-indicators li{
      background-color: white;
      width: 10px;
      height: 10px;
      border-radius: 50%;
      border: 1px solid #a9afb3;
    }
    .carousel-indicators .active{
      background-color: #a9afb3;
    }
    .title-text {
      padding: 300px 125px;
      h3 {
        text-transform: none;
        p {
          display: inline;
          color: #848789;
        }
      }
    }
    ul {
      display: flex;
      li {
        background-color: red;
        button {
          display: none !important;
        }
      }
    }
  }
  .gallery {
    width: 100%;
    .container-fluid{
      display: flex;
      padding: 0;
      .col-4{
        padding: 0;
        &:nth-child(1) .gallery__item{
         height: 266px;
        }
        &:nth-child(2) .gallery__item{
          height: 540px;
        }
      }
    }
    .gallery__item{
      width: 100%;
      height: 270px;
      display: flex;
      align-items: stretch;
      justify-content: stretch;
      a {
        position: relative;
        display: flex;
        flex-direction: column;
        background-image: none;
        justify-content: center;
        align-items: center;
        flex-grow: 1;
        text-decoration: none;
        text-transform: uppercase;
        color: #fff;
        font-size: 18px;
        font-weight: bold;
        opacity: 0;
        background-color: rgba(100, 194, 158, 0.8);
        &:hover{
          opacity: 1;
        }
        &:after {
          position: absolute;
          content: '';

          left: 0;
          top: 0;
          right: 0;
          bottom: 0;
          opacity: 0;
          transition: opacity .3s ease;
          z-index: -1;
        }
      }
    }
  }
  .discover {

    align-items: center;
    justify-content: center;
    min-height: 200px;
    background: #282f35;
    .discover__button {
      letter-spacing: 4.5px;
      font-size: 14px;
      background: #282f35;
      border: 2px solid white;
      color: white;
      padding: 20px 58px;
      text-transform: uppercase;
    }
  }
  .contact-with-us {
    font-size: 24px;
    color: #848789;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 110px;
    .contact-with-us__input {
      padding-top: 40px;
      input {
        padding: 25px;
        width: 350px;
        font-size: 15px;
        color: #c8c8c8;
        border: 2px solid #d3d7d9;
      }
      button {
        font-size: 17px;
        padding: 25px 45px;
        color: white;
        background: #64c29e;
        border: none;
      }
    }
  }
}

footer {
  .container {
    display: flex;
    justify-content: space-around;
    padding: 100px 250px;
    &__item {
      font-size: 16px;
      .street, .city {
        color: #848789;
        padding-bottom: 7px;
      }
      .company {
        padding-bottom: 7px;
      }
    }
    .social-icon {
      img {
        padding-left: 15px;
      }
    }
    .author {
      display: flex;
      p {
        color: #848789;
      }
      svg {
        padding: 10px;
      }
    }
  }

}

